log
Thu, Mar 20, 2025  5:15:04 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025  5:50:56 PM: 
 exercises.c | 24 ++++++++++++++++++++++--
 1 file changed, 22 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:99:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '}' token
 }
 ^
exercises.c:97:11: error: unused variable 'Paux' [-Werror=unused-variable]
    Stack* Paux = create_stack();
           ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
04d4d81
Thu, Mar 20, 2025  5:57:32 PM: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
test.c: In function 'test_elimina_elemento':
test.c:132:5: error: implicit declaration of function 'eliminaElementos' [-Werror=implicit-function-declaration]
     eliminaElementos(L, elem);
     ^~~~~~~~~~~~~~~~
test.c: In function 'test_copia_pila':
test.c:175:5: error: implicit declaration of function 'copia_pila' [-Werror=implicit-function-declaration]
     copia_pila(P1, P2);
     ^~~~~~~~~~
test.c: In function 'test_parentesis_balanceados':
test.c:217:9: error: implicit declaration of function 'parentesisBalanceados' [-Werror=implicit-function-declaration]
     if(!parentesisBalanceados(s)){
         ^~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
709ca44
